[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Places/Town.gd" type="Script" id=1]
[ext_resource path="res://Art/Grama.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/Pause.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/ExitMouse.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Placeable.gd" type="Script" id=6]
[ext_resource path="res://Art/Placeables/SignHouse.png" type="Texture" id=7]
[ext_resource path="res://Scripts/NPC.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Scrat.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/UI/Transition.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 285.631, 257.986 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 387.96, 259.398 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 59.8019, 30.3613 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 72.2358, 41.1125 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 56.6084, 27.8953 )

[sub_resource type="CircleShape2D" id=6]
radius = 202.807

[node name="Town" type="Node2D"]
script = ExtResource( 1 )

[node name="Grama" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Grama" type="Sprite" parent="Grama"]
modulate = Color( 0.180392, 0.419608, 0.164706, 1 )
texture = ExtResource( 2 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Grama"]
polygon = PoolVector2Array( -675.567, 76.6741, 6995.88, 63.2054, 6990.71, 3785.08, 6.15662, 3779.92, 11.319, 548.338, -597.829, 548.338, -602.992, 4414.88, 7434.67, 4420.04, 7543.08, -382.768, -670.405, -516.987 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 133.133, 305.389 )

[node name="Pause" parent="." instance=ExtResource( 4 )]

[node name="ToHouse" type="Area2D" parent="."]
position = Vector2( -445.586, 298.869 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToHouse"]
shape = SubResource( 1 )

[node name="ToHouseMouse" type="Area2D" parent="."]
position = Vector2( -227.685, 299.585 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToHouseMouse"]
shape = SubResource( 2 )

[node name="Sign" type="StaticBody2D" parent="." groups=[
"Interactable",
]]
position = Vector2( 352.356, 154.542 )
script = ExtResource( 6 )
info = PoolStringArray( "This path leads to my house.", "Cool!" )

[node name="Sprite" type="Sprite" parent="Sign"]
position = Vector2( -3.40442, -149.04 )
texture = ExtResource( 7 )

[node name="Col" type="CollisionShape2D" parent="Sign"]
shape = SubResource( 3 )

[node name="Interactive" type="Area2D" parent="Sign"]

[node name="Col" type="CollisionShape2D" parent="Sign/Interactive"]
shape = SubResource( 4 )

[node name="IntPos" type="Position2D" parent="Sign"]
position = Vector2( 0, 74 )

[node name="NPC" type="KinematicBody2D" parent="." groups=[
"Interactable",
]]
position = Vector2( 1221.91, 443.986 )
script = ExtResource( 8 )

[node name="Scrat" parent="NPC" instance=ExtResource( 9 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC"]
shape = SubResource( 5 )

[node name="Wander" type="Timer" parent="NPC"]
one_shot = true

[node name="Interact" type="Area2D" parent="NPC"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Interact"]
shape = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="NPC"]
cast_to = Vector2( 500, 0 )

[node name="Transition" parent="." instance=ExtResource( 10 )]
[connection signal="body_entered" from="ToHouse" to="." method="_on_ToHouse_body_entered"]
[connection signal="timeout" from="NPC/Wander" to="NPC" method="_on_Wander_timeout"]
